build.log
# This file contains the result of Yarn building a package (csr@npm:0.0.1)
# Script name: install

gyp info it worked if it ends with ok
gyp info using node-gyp@8.4.1
gyp info using node@17.4.0 | linux | x64
gyp info find Python using Python version 3.7.3 found at "/usr/bin/python3"
gyp http GET https://nodejs.org/download/release/v17.4.0/node-v17.4.0-headers.tar.gz
gyp http 200 https://nodejs.org/download/release/v17.4.0/node-v17.4.0-headers.tar.gz
gyp http GET https://nodejs.org/download/release/v17.4.0/SHASUMS256.txt
gyp http 200 https://nodejs.org/download/release/v17.4.0/SHASUMS256.txt
gyp info spawn /usr/bin/python3
gyp info spawn args [
gyp info spawn args   '/.../node_modules/node-gyp/gyp/gyp_main.py',
gyp info spawn args   'binding.gyp',
gyp info spawn args   '-f',
gyp info spawn args   'make',
gyp info spawn args   '-I',
gyp info spawn args   '/.../node_modules/csr/build/config.gypi',
gyp info spawn args   '-I',
gyp info spawn args   '/.../node_modules/node-gyp/addon.gypi',
gyp info spawn args   '-I',
gyp info spawn args   '/.../.cache/node-gyp/17.4.0/include/node/common.gypi',
gyp info spawn args   '-Dlibrary=shared_library',
gyp info spawn args   '-Dvisibility=default',
gyp info spawn args   '-Dnode_root_dir=/.../.cache/node-gyp/17.4.0',
gyp info spawn args   '-Dnode_gyp_dir=/.../node_modules/node-gyp',
gyp info spawn args   '-Dnode_lib_file=/.../.cache/node-gyp/17.4.0/<(target_arch)/node.lib',
gyp info spawn args   '-Dmodule_root_dir=/.../node_modules/csr',
gyp info spawn args   '-Dnode_engine=v8',
gyp info spawn args   '--depth=.',
gyp info spawn args   '--no-parallel',
gyp info spawn args   '--generator-output',
gyp info spawn args   'build',
gyp info spawn args   '-Goutput_dir=.'
gyp info spawn args ]
gyp info spawn make
gyp info spawn args [ 'BUILDTYPE=Release', '-C', 'build' ]
make : on entre dans le répertoire « /.../node_modules/csr/build »
  CXX(target) Release/obj.target/binding/src/binding.o
../src/binding.cc:1: warning: "BUILDING_NODE_EXTENSION" redefined
 #define BUILDING_NODE_EXTENSION
 
<command-line>: note: this is the location of the previous definition
In file included from /.../.cache/node-gyp/17.4.0/include/node/openssl/././archs/linux-x86_64/asm/include/openssl/x509.h:20,
                 from /.../.cache/node-gyp/17.4.0/include/node/openssl/./x509_asm.h:11,
                 from /.../.cache/node-gyp/17.4.0/include/node/openssl/x509.h:4,
                 from ../src/csr.h:5,
                 from ../src/binding.cc:3:
/.../.cache/node-gyp/17.4.0/include/node/openssl/macros.h:155:4: error: #error "OPENSSL_API_COMPAT expresses an impossible API compatibility level"
 #  error "OPENSSL_API_COMPAT expresses an impossible API compatibility level"
    ^~~~~
In file included from ../src/binding.cc:3:
../src/csr.h:12:37: error: expected class-name before ‘{’ token
 class CSR : public node::ObjectWrap {
                                     ^
../src/csr.h:14:26: error: ‘v8::Handle’ has not been declared
   static void Initialize(v8::Handle<v8::Object> target);
                          ^~
../src/csr.h:14:36: error: expected ‘,’ or ‘...’ before ‘<’ token
   static void Initialize(v8::Handle<v8::Object> target);
                                    ^
../src/csr.h:20:14: error: ‘Handle’ in namespace ‘v8’ does not name a template type
   static v8::Handle<v8::Value> New(const v8::Arguments& args);
              ^~~~~~
../src/csr.h:20:10: note: suggested alternative: ‘JobHandle’
   static v8::Handle<v8::Value> New(const v8::Arguments& args);
          ^~
          JobHandle
../src/csr.h:21:14: error: ‘Handle’ in namespace ‘v8’ does not name a template type
   static v8::Handle<v8::Value> GetSubject(const v8::Arguments& args);
              ^~~~~~
../src/csr.h:21:10: note: suggested alternative: ‘JobHandle’
   static v8::Handle<v8::Value> GetSubject(const v8::Arguments& args);
          ^~
          JobHandle
../src/binding.cc:7:11: error: variable or field ‘init’ declared void
 void init(Handle<Object> target) {
           ^~~~~~
../src/binding.cc:7:11: error: ‘Handle’ was not declared in this scope
../src/binding.cc:7:11: note: suggested alternative: ‘rand_r’
 void init(Handle<Object> target) {
           ^~~~~~
           rand_r
../src/binding.cc:7:24: error: expected primary-expression before ‘>’ token
 void init(Handle<Object> target) {
                        ^
../src/binding.cc:7:26: error: ‘target’ was not declared in this scope
 void init(Handle<Object> target) {
                          ^~~~~~
../src/binding.cc:7:26: note: suggested alternative: ‘tzset’
 void init(Handle<Object> target) {
                          ^~~~~~
                          tzset
In file included from ../src/binding.cc:2:
../src/binding.cc:11:22: error: ‘init’ was not declared in this scope
 NODE_MODULE(binding, init)
                      ^~~~
/.../.cache/node-gyp/17.4.0/include/node/node.h:843:36: note: in definition of macro ‘NODE_MODULE_X’
       (node::addon_register_func) (regfunc),                          \
                                    ^~~~~~~
../src/binding.cc:11:1: note: in expansion of macro ‘NODE_MODULE’
 NODE_MODULE(binding, init)
 ^~~~~~~~~~~
../src/binding.cc:11:22: note: suggested alternative: ‘int’
 NODE_MODULE(binding, init)
                      ^~~~
/.../.cache/node-gyp/17.4.0/include/node/node.h:843:36: note: in definition of macro ‘NODE_MODULE_X’
       (node::addon_register_func) (regfunc),                          \
                                    ^~~~~~~
../src/binding.cc:11:1: note: in expansion of macro ‘NODE_MODULE’
 NODE_MODULE(binding, init)
 ^~~~~~~~~~~
make: *** [binding.target.mk:112: Release/obj.target/binding/src/binding.o] Error 1
make : on quitte le répertoire « /.../node_modules/csr/build »
gyp ERR! build error 
gyp ERR! stack Error: `make` failed with exit code: 2
gyp ERR! stack     at ChildProcess.onExit (/.../node_modules/node-gyp/lib/build.js:194:23)
gyp ERR! stack     at ChildProcess.emit (node:events:520:28)
gyp ERR! stack     at Process.ChildProcess._handle.onexit (node:internal/child_process:291:12)
gyp ERR! System Linux 4.19.0-13-amd64
gyp ERR! command "/.../.nvm/versions/node/v17.4.0/bin/node" "/.../node_modules/node-gyp/bin/node-gyp.js" "rebuild"
gyp ERR! cwd /.../node_modules/csr
gyp ERR! node -v v17.4.0
gyp ERR! node-gyp -v v8.4.1
gyp ERR! not ok
